[FIX] sap.m.ObjectStatus: remove extra spacing in table
Issue: The Inverted ObjectStatus with long text will sometimes have
extra space to the right when placed in a table.

Solution: If the "sapMObjectStatusLongText" class is not being used,
set the width to that of the text length in a table.

BCP: 2370138291

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -965,6 +965,10 @@ html.sap-desktop .sapMListTblHasPopin .sapMObjStatusActive:focus {
 	.sapMObjStatus.sapMObjStatusInverted {
 		display: inline-table;
 
+		&:not(.sapMObjectStatusLongText):not(:has(.sapMObjStatusIcon)) {
+			width: min-content;
+		}
+
 		.sapMObjStatusText {
 			line-height: 1rem;
 			vertical-align: middle;
